# 03-genomica

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_create_tables.py
app/: config.py  database.py  main.py
app/api/: references.py  runs.py
app/models/: __init__.py  enums.py  reference.py  run.py
app/schemas/: __init__.py  reference.py  run.py
app/services/: datalake_service.py  minio_service.py  monitor_service.py  pipeline_service.py
docs/: DEV.to.md  DISSERTACAO.md  GUIA-GENOMICA.md  LINKEDIN.md  PLANO-PROJETO-3.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.ts  style.css
frontend/src/api/: client.ts
frontend/src/components/: badge.ts  toast.ts
frontend/src/pages/: index.ts  references.ts  run-create.ts  run-detail.ts  runs-list.ts
pipeline/: main.nf  nextflow.config
pipeline/assets/: samplesheet.csv
pipeline/conf/: base.config  docker.config  eco.config  grch38.config  performance.config  test.config
pipeline/modules/: bcftools_stats.nf  bwa_align.nf  fastqc.nf  gatk_bqsr.nf  gatk_combine.nf  gatk_dedup.nf  gatk_genotype.nf  gatk_haplotypecaller.nf  gatk_vqsr.nf  multiqc.nf  r_report.nf
pipeline/subworkflows/: align.nf  filter.nf  variant_call.nf
scripts/: download-ref-grch38.sh  gen-test-data.sh
tests/: conftest.py
tests/test_api/: test_references.py  test_runs.py
tests/test_services/: test_enums.py  test_services.py
worker/: Dockerfile
(+3 files in other folders)
